Dopestreamer/src/com/dopelives/dopestreamer/res/style/style.css
.root {
    -fx-padding: 20.0px;
    -fx-background-image: url("../images/bg.jpg");
    -fx-font-size: 14.0px;
    -fx-font-family: Arial;
}

#header {
    -fx-font-size: 25.0px;
    -fx-font-family: "Arial Black";
    -fx-fill: #696;
    -fx-effect: innershadow(three-pass-box, rgba(0.0,0.0,0.0,0.7), 4.0, 0.0, 0.0, 2.0);
    -fx-cursor: hand;
}

.headerButton {
    -fx-padding: 9.0px 0.0px 0.0px 0.0px;
}
.headerButton ImageView {
    -fx-background-color: rgba(0.0,0.0,0.0,0.0);
    -fx-cursor: hand;
}

.label {
    -fx-font-family: Arial;
    -fx-font-size: 15.0px;
    -fx-font-weight: bold;
    -fx-text-fill: #696;
    -fx-label-padding: 20.0px 0.0 4.0px 0.0;
    -fx-effect: innershadow(three-pass-box, rgba(0.0,0.0,0.0,0.7), 3.0, 0.0, 0.0, 1.5);
}

.link {
    -fx-fill: #585;
    -fx-cursor: hand;
}
.link:hover {
    -fx-fill: #8b8;
}

.unavailable {
    -fx-opacity: 0.4;
}
.invalid {
    -fx-effect: dropshadow(three-pass-box, #f00, 5.0, 0.0, 0.0, 0.0);
}


#streamButton {
    -fx-font-size: 22.0px;
    -fx-text-fill: #fff;
    -fx-font-weight: bold;
    -fx-alignment: center;
    -fx-cursor: hand;
}
#streamButton.inactive {
    -fx-base: #808d96;
}
#streamButton.busy {
    -fx-base: #c9bb5b;
}
#streamButton.active {
    -fx-base: #696;
}
#streamButton .text {
    -fx-effect: innershadow(three-pass-box, rgba(0.0,0.0,0.0,0.2), 1.5, 0.0, 0.0, 1.0);
    -fx-effect: dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.2), 2.5, 0.0, 0.0, 1.5);
}

